--- a/style.css
+++ b/style.css
@@ -7,11 +7,16 @@ h1 {
     font-size: 55px
 }
 
+h2 {
+    font-size: 40px;
+    text-align: center;
+}
+
 .color {
     color: orange;
 }
 
-section {
+.flexible-area {
     display: flex;
     margin-bottom: 100px;
 }
@@ -45,4 +50,38 @@ section {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.align {
+    text-align: justify;
+    padding-right: 65px;
+}
+
+.experience-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.experience {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
+
+}
+
+#sqa {
+    border-left: 6px solid tomato;
+}
+
+#web {
+    border-left: 6px solid blueviolet;
+
+}
+
+footer p {
+    text-align: center;
 }
